--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -89,6 +89,7 @@ main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 2rem;
 	flex-direction: column;
 	color: white;
 	height: 100%;
@@ -142,8 +143,34 @@ main {
 		flex-direction: column;
 		align-items: center;
 		border-bottom: 1px solid white;
-		margin-bottom: 4rem;
 		padding-bottom: 1rem;
+	}
+	
+	.projects {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		gap: 2rem;
+
+		&-card {
+			height: 170px;
+			width: 250px;
+			background-color: #eee;
+			color: #151515;
+			display: flex;
+			flex-direction: column;
+
+			&-image {
+				position: relative;
+				height: 145px;
+			}
+
+			&-title {
+				margin: 0 0.5rem 0.5rem;
+				display: flex;
+				align-items: center;
+				gap: 0.5rem;
+			}
+		}
 	}
 }
 
